--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-dom": "^16.14.0",
     "react-infinite-scroller": "^1.2.4",
     "react-router-dom": "^5.2.0",
+    "react-router-hash-link": "^2.3.1",
     "react-scripts": "3.4.3",
     "vexflow": "^3.0.9"
   },
