--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
     "react-infinite-scroller": "^1.2.4",
+    "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-router-hash-link": "^2.3.1",
     "react-scripts": "3.4.3",
+    "redux": "^4.0.5",
     "vexflow": "^3.0.9"
   },
   "scripts": {
